crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_command_completion.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---


 /docs         open the smelt documentation in you
 /cost         show session cost and active provid
 /compact      compact conversation history
 /color        set session color
 /clear        start new conversation
 /changelog    show release notes for the latest s
 /btw          ask a side question
 /branch       fork current session
──────────────────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
