crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_command_completion.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 14
  3   1   5 fg=AnsiValue(208)
  3  15  35 attrs=dim
  4   1   5 fg=AnsiValue(208)
  4  15  17 attrs=dim
  5   1   8 fg=AnsiValue(208)
  5  15  28 attrs=dim
  6   1   6 fg=AnsiValue(208)
  6  15  19 attrs=dim
  7   1   6 fg=AnsiValue(208)
  7  15  22 attrs=dim
  8   1   4 fg=AnsiValue(208)
  8  15  19 attrs=dim
  9   0   1 bg=AnsiValue(237)
  9   1   7 fg=AnsiValue(208) bg=AnsiValue(237)
  9   8   7 bg=AnsiValue(237)
  9  15  20 bg=AnsiValue(237) attrs=dim
  9  35  15 bg=AnsiValue(237)
 10   0  47 fg=AnsiValue(237)
 10  47   1 fg=AnsiValue(244)
 10  49   1 fg=AnsiValue(237)
 11   2   1 fg=Black bg=White
 12   0  50 fg=AnsiValue(237)
 13   0  50 bg=AnsiValue(233)
