crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_command_refilter_keeps_best_on_bottom.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 439
expression: frame.text()
---




 /aaacx  old first
 /acx    best match
──────────────────────────────────────────────────
 /acx
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
