crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_command_refilter_keeps_best_on_bottom.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 10
  4   1   6 fg=AnsiValue(208)
  4   9   9 attrs=dim
  5   0   1 bg=AnsiValue(237)
  5   1   4 fg=AnsiValue(208) bg=AnsiValue(237)
  5   5   4 bg=AnsiValue(237)
  5   9  10 bg=AnsiValue(237) attrs=dim
  5  19  31 bg=AnsiValue(237)
  6   0  50 fg=AnsiValue(237)
  7   1   4 fg=AnsiValue(208)
  7   5   1 fg=Black bg=White
  8   0  50 fg=AnsiValue(237)
  9   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  9  10  32 bg=AnsiValue(233)
  9  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
