crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_completion_shrinks_for_short_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
 /clear        start new conversation
 /changelog    show release notes for the latest s
 /btw          ask a side question
 /branch       fork current session
──────────────────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
