crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_completion_two_rows_when_cramped.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
 /btw          ask a side question
 /branch       fork current session
──────────────────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
