crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_completion_two_rows_when_cramped.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 6
  0   1   6 fg=AnsiValue(208)
  0  15  35 attrs=dim
  1   0   1 bg=AnsiValue(237)
  1   1   7 fg=AnsiValue(208) bg=AnsiValue(237)
  1   8   7 bg=AnsiValue(237)
  1  15  20 bg=AnsiValue(237) attrs=dim
  1  35  15 bg=AnsiValue(237)
  2   0  50 fg=AnsiValue(237)
  3   2   1 fg=Black bg=White
  4   0  50 fg=AnsiValue(237)
  5   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  5  10  32 bg=AnsiValue(233)
  5  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
