crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_completion_with_live_notification.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 515
expression: frame.text()
---
 /changelog    show release notes for the latest s
 /btw          ask a side question
 /brief        summarize planned or completed chan
  info  slash notice
──────────────────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
